--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>  
 		<h1>1. iOS安装 <a href="https://120.132.9.213/ipa/server.crt">证书</a><br/>(如果之前尚未安装过此证书，请先安装证书)</h1>  
 		<br/>  
-		<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url=https://github.com/tanwer/ios_test/manifest.plist">游戏包</a></h1>  
+		<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url=https://tanwer.github.io/ios_test/manifest.plist">游戏包</a></h1>  
 		<br/>  
 		<h1>3. Android安装 <a href="http://120.132.9.213/app/">游戏包</a></h1>  
 	</body>  
